- Drag multiday event in month grid for second day will create correct exception
- Fixed Softaculous issue with installing

27-07-2015 6.1.42
- Select the first visible item in a multi select list when none selected (Tasklists, Notebooks)
- GOTA Login dialog did not appear anymore when logged out in Group-Office
- WebDAV locks stored in database for better performance.
- Fixed issue where the VALARM of a VEVENT was missing the hours in the local timezone difference on full day events
- Fixed bug in billing items autocomplete
- Brought back new sub item in projects2
- Added start date to sub projects grid
- Fixed full view of profile image
- Added URL to vcard export
- Double substraction of a minute on all day event bug fixed
- Support for multiple EXDATE values comma separated in ICS files
- Theme selection: Fix for when Group-Office is branded that the Group-Office theme is not found anymore.
- Billing: Itemsgrid - Height of items description editor in the items grid is automatically changed to the height of the cell.
- Added workflow information to the event display dialog
- Removed PHP5.4 short array declaration method from smime CertificatControlller
- Fixed bug in calendar week print when an event would run from before 19:00 till after 07:00 the next day
- Fixed bug where event duplicated on recurring events with exceptions
- Improved etag values for caldav everywhere
- Replaced Flash notification sound player with a HTML5 version.
- Files: Added a download button to the files grid.
- Sieve: Fixed problem with saving of Out of office tab when sieve file was empty initially.
- Added relational data to Group.php and UserGroup.php
- Sieve: Fixed problem with the Out of office tab "Aliasses" field when putting in multiple addresses on multiple lines.
- Bookmarks: Make local urls also available to add as a bookmark.

17-06-2015 6.1.41
- Improved etag values for caldav
- Removed funambol all day flag as it causes problems with thunderbird all day event changes