@@ -638,3 +638,14 @@ $l['hu']= 'Ungarsk';
 $l['pt_BR']='Portugisisk - Brasil';
 $l['cantDeleteDefault']= "Kan ikke slette standardelementet.";
 $l['updateWithMatchingAttributes']= 'Endre elementeme ( i stedet for å legge til nye ) basert på at følgende attributer matcher';
+$l['columns']= 'Kolonne';
+$l['savedExport']= 'Lagret eksportjobb';
+$l['savedExports']= 'Lagrede eksportjobber';
+$l['includeColumnNames']= 'Ta med kolonnenavn';
+$l['manageSavedExports']= 'Behandle lagrede eksportjobber';
+$l['noSavedExports']= 'Finner ingen lagrede eksportjobber';
+$l['overwriteAcl']= 'Overstyre standardrettighetene for dette elementet (sett kryss for å aktivere)';
+$l['zipFilesizeTooBig']= 'Samlet størrelse på valgte filer er for stor. (Maks. tillatte størrelse er %s.)';
+$l['selectedColumns']= 'Valgte kolonner';
+$l['availableColumns']= 'Tilgjengelige kolonner';
+$l['exportSelectHelpText']= 'Dra (eller dobbeltklikk) de kolonnene du vil eksportere fra venstre felt til høyre.';
