@@ -6,7 +6,6 @@ $l['description']='En modul for å lage notater';
 $lang['link_type'][4]=$l['general'] = 'Generell';
 $l['incomplete_delete']='Du har ikke rettigheter til å slette alle valgte notater';
 $l['multipleCategoriesSelected']='Flere notatkategoeier er valgt';
-
 $l["category"]="Kategori";
 $l["categories"]="Kategorier";
 $l["notes"]="Notater";
@@ -14,3 +13,5 @@ $l["category_id"]="Kategori ID";
 $l["content"]="Innehold";
 $l["manageCategories"]="Behandle kategorier";
 $l['general']= 'Notat';
+$l['note']='Notat';
+$l['encryptedContent']='Innholdet er kryptert';
