@@ -116,4 +116,19 @@ $l["redirect_copy_to"]= 'Send en kopi til';
 $l['sieveWarning']="Hvis IMAP serveren støtter sievefiltere bør du bruke disse i stedet. Forsøk fanen 'Sieve filtere' først.";
 $l['setRead']='Sett meldingen som lest';
 $l['stopEndError']= 'Stopp må være siste handling!';
-$l['body']='Body';
+$l['body']='Meldingstekst';
+$l['bodycontainsnot']= 'Meldingstekst inneholder ikke';
+$l['bodycontains']= 'Meldingstekst inneholder';
+$l['standardvacationsubject']='Jeg er ikke på kontoret';
+$l['outOfOffice']='Fraværsmelding';
+$l['message']='Melding';
+$l['aliasses']='Aliaser';
+$l['schedule']='Tidsrom';
+$l['activateAt']='Aktiver den';
+$l['deactivateAt']='Slå av etter';
+$l['scheduleText']='Her kan du angi når fraværsmeldingen din skal være aktiv.';
+$l['messageText']='Skriv inn meldingen din i feltet nedenfor.';
+$l['subjectText']='Skriv inn emne for meldingen i feltet nedenfor.';
+$l['aliassesText']='Skriv inn eventuelle aliaser som fraværsmeldingen skal brukes for. Hvis du har flere aliaser skiller du dem med komma (,).';
+$l['activateText']='Aktiver dette filteret ved å krysse av nedenfor.';
+$l['advancedOptions']= 'Avanserte innstillinger';
